# profit-rat

./: .gitignore  Cargo.toml  README.md  profit-rat.toml
docs/: bootstrap-roadmap.md
migrations/: 0001_init.sql  0002_share_transfer_offers.sql  0003_guild_economy_and_social_layer.sql  0004_market_resolution_controls.sql  0005_market_orders.sql  0006_bonds.sql  0007_bond_transfer_offers.sql
src/: admin.rs  config.rs  error.rs  logging.rs  main.rs  startup.rs
src/bot/: charts.rs  mod.rs  ui.rs
src/bot/commands/: bonds.rs  charts.rs  help.rs  leaderboard.rs  market.rs  mod.rs  social.rs  trading.rs  user.rs
src/db/: mod.rs
src/domain/: external_market.rs  market.rs  mod.rs  pricing.rs
src/integrations/: manifold.rs  mod.rs
src/jobs/: mod.rs
src/services/: bond_service.rs  leaderboard_service.rs  market_service.rs  mod.rs  social_service.rs  trading_service.rs  user_service.rs
