[package]
name = "profit-rat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
poise = "0.6.2"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "migrate", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json", "time"] }
url = "2.5.8"
uuid = { version = "1.23.2", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"
